[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/PointsArea.gd" type="Script" id=1]
[ext_resource path="res://Images/Objectives/SquareObjectiveFILL.png" type="Texture" id=2]
[ext_resource path="res://Images/Objectives/SquareObjective.png" type="Texture" id=3]

[sub_resource type="Animation" id=2]
resource_name = "RUN"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("FILL:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("FILL:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.6, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("FILL:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.6, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "RUN-DOT"
tracks/0/type = "bezier"
tracks/0/path = NodePath("FILL:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("FILL:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("FILL:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}

[node name="PointsArea" type="Node2D"]
script = ExtResource( 1 )

[node name="FILL" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.8 )
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true

[node name="FILL2" type="TextureRect" parent="."]
visible = false
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true

[node name="OBJECTIVE" type="TextureRect" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 3 )
expand = true

[node name="Button" type="Button" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RUN = SubResource( 2 )
anims/RUN-DOT = SubResource( 3 )

[node name="PentagonTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
